draw lightCube, add spotLight, not working

--- a/app/config.json
+++ b/app/config.json
@@ -6,6 +6,9 @@
       },
       "lighthouse": {
         "path": "lighthouse/lighthouse.obj"
+      },
+      "cube": {
+        "path": "cube/cube.fbx"
       }
     }
   },
