--- a/app/config.json
+++ b/app/config.json
@@ -17,7 +17,7 @@
   },
   "window": {
     "height": 1000,
-    "title": "Hello, window!",
+    "title": "The Lighthouse island",
     "width": 1800
   }
 }
